# haskell-notes

./: LICENSE  haskell-notes.cabal
app/: Main.hs
app/AllenMoronuki/: Chapter02.hs  Chapter03.hs  Chapter04.hs
app/HelsinkiMooc/: H1.hs  H1_3_1_Features.hs  H2.hs
app/Spare/: SystemIO.hs  TenMinutes.hs  TypeDefaults.hs
app/helsinki-mooc/: 1.3.1_features.hs
app/spare/: 0x1.hs
