cabal-version:      3.0
name:               haskell-notes
version:            0.1.0.0
synopsis:           Notes on learning Haskell
homepage:           https://github.com/jultty/haskell-notes
license:            BSD-3-Clause
license-file:       LICENSE
author:             Juno Takano
maintainer:         juno@jutty.dev
category:           Language
build-type:         Simple

common warnings
    ghc-options: -Wall

executable haskell-notes
    import:           warnings
    main-is:          Main.hs
    other-modules:    Spare.TenMinutes,
                      Spare.SystemIO,
                      HelsinkiMooc.H1,
                      HelsinkiMooc.H2,
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1,
                      process, text,
    hs-source-dirs:   app
    default-language: Haskell2010
